# xczu9

./: README.md
bd/mpsoc/: mpsoc.bd
linux/: eemc_format.sh  emmc_format.sh
linux/debug_script/: tlk2711b-loopback.sh
linux/driver/: Makefile  build_cross.sh  fbga_com.h  fbga_drv.c  fbga_drv.h
linux/driver/test_app/: .fbga_app.c.swp  fbga_app.c  gpio_set.sh  tlk2711.sh
linux/sdk/: CMakeLists.txt  demo.cpp  file_intf.cpp  file_intf.hpp
script/: mpsoc.tcl  ps.tcl  vivado.tcl  xczu9.tcl
source/bd/mpsoc/: mpsoc.bd  mpsoc.bxml
source/constr/: package.xdc  timing.xdc  tlk2711.xdc
source/debug/: rx_link_debug.tsm
source/ip/clk_wiz_0/: clk_wiz_0.xci
source/ip/fifo_fwft_16_2048/: fifo_fwft_16_2048.xci  fifo_fwft_16_2048_sim_netlist.v
source/ip/fifo_fwft_18_1024/: fifo_fwft_18_1024.xci
source/ip/fifo_fwft_64_512/: fifo_fwft_64_512.xci  fifo_fwft_64_512_sim_netlist.v
source/ip/fpga_mgt_v1.0/: component.xml
source/ip/ila_0/: ila_0.xci
source/ip/ila_2711_rx/: ila_2711_rx.xci
source/ip/ila_datamover/: ila_datamover.xci
source/ip/ila_fifo_cdc/: ila_fifo_cdc.xci
source/ip/ila_fifo_rx_validation/: ila_fifo_rx_validation.xci
source/ip/ila_fifo_tx_validation/: ila_fifo_tx_validation.xci
source/ip/ila_hp2/: ila_hp2.xci
source/ip/ila_mgt/: ila_mgt.xci
source/ip/ila_rx_validation/: ila_rx_validation.xci
source/ip/ila_tlk2711_rx/: ila_tlk2711_rx.xci
source/sim/: tlk2711_tb.sv
source/src/: emmc_iobuf.v  reset_bridge.v  reset_bridge.v.bck  tlk2711.sv  tlk2711_rx.sv  tlk2711_tx_cmd.sv  tlk2711_tx_data.sv  top.v
vivado/: xczu9.xpr
(+41 files in other folders)
